--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
       <div class="header__inner">
         <div>
           <button id="openPopup" class="open-btn">
-            <div class="menu-btn__inner">
+            <button id="open-btn" class="menu-btn__inner">
               <div class="line-1"></div>
               <div class="line-2"></div>
               <div class="line-3"></div>
-            </div>
+            </button>
           </button>
 
           <div id="sidebarPopup" class="sidebar">
@@ -280,7 +280,7 @@
       <section class="info">
         <div class="container">
           <div class="contain__img">
-            <img src="./img/Rectangle 28.png" alt="" class="sponsor__img" />
+            <img src="./img/theater.png" alt="" class="sponsor__img" />
 
             <div class="contain">
               <div>
@@ -452,7 +452,9 @@
             <div class="footer__contacts">
               <ul class="footer__contacts-list">
                 <li class="footer__contacts-items">
-                  <a href="tel:+78121234555" class="footer__contacts-phone"
+                  <a
+                    href="tel:+78121234555"
+                    class="footer__contacts-phone phone-1"
                     >+7 (812) 123-45-55</a
                   >
                 </li>
@@ -476,7 +478,7 @@
               </ul>
             </div>
             <form action="" class="footer__form">
-              <div>
+              <div class="input__div">
                 <input type="text" placeholder="Имя" class="form__name" />
                 <input
                   type="text"
@@ -484,7 +486,7 @@
                   class="form__company"
                 />
               </div>
-              <div>
+              <div class="input__div">
                 <input type="tel" placeholder="Телефон" class="form__tel" />
                 <input type="email" placeholder="E-mail" class="form__email" />
               </div>
@@ -492,7 +494,7 @@
               <label for="text"></label>
               <textarea
                 id="text"
-                type="text"
+                type="textarea"
                 placeholder="Сообщение"
                 class="form__text text"
               ></textarea>
