--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                     <a href="">Партнеры Театра</a>
                   </li>
                   <li class="nav__list-items"><a href="">Контакт</a></li>
-                  <li class="nav__list-items">
+                  <!-- <li class="nav__list-items">
                     <a href="#" class="nav-link">+7 795 123-45-67</a>
-                  </li>
+                  </li> -->
                 </ul>
               </nav>
               <div class="header__social">
