--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
           </div>
         </div>
       </section>
+
       <section class="slider">
         <div>
           <h2 class="slider__title"><span>наши</span> постановки</h2>
@@ -338,6 +339,11 @@
           </div>
         </div>
       </section>
+
+      <!-- <div id="imageModal" class="modal">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="modalImage" src="" alt="" />
+      </div> -->
 
       <section class="info">
         <div class="container">
