--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@
             </div>
             <div class="header__slider">
               <div class="header__slider-item">
-                <img src="./img/slider.jpg" alt="" class="slider-img" />
+                <img src="./img/slider.svg" alt="" class="slider-img" />
               </div>
               <div class="header__slider-item">
-                <img src="./img/slider.jpg" alt="" class="slider-img" />
+                <img src="./img/slider.svg" alt="" class="slider-img" />
               </div>
             </div>
           </div>
@@ -269,7 +269,7 @@
         <div class="slider__inner">
           <div class="slider__slider">
             <h3 class="slider__slider-date">ОСКАР 2020</h3>
-            <div class="loop">
+            <div id="test">
               <img src="./img/slider-1.jpg" alt="" class="img-1" />
               <button class="loop__btn">
                 <img src="./img/loop.svg" alt="" />
@@ -339,11 +339,6 @@
           </div>
         </div>
       </section>
-
-      <!-- <div id="imageModal" class="modal">
-        <span class="close">&times;</span>
-        <img class="modal-content" id="modalImage" src="" alt="" />
-      </div> -->
 
       <section class="info">
         <div class="container">
